# test

./: .env.example  .gitignore  PHASE_1_SUMMARY.md  PHASE_3_SUMMARY.md  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml
EVAL_RESULTS/: insight_eval_report.md
RUNBOOKS/: deploy.md  rollback.md
apps/ml-api/: Dockerfile  package.json  pyproject.toml  requirements.txt
apps/ml-api/app/: main.py  model.py  schemas.py
apps/ml-api/models/: .gitkeep
apps/ml-api/scripts/: benchmark.py  export_model.py
apps/ml-api/tests/: test_api.py
apps/web/: next.config.js  package.json  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(auth)/login/: page.tsx
apps/web/src/app/(auth)/register/: page.tsx
apps/web/src/app/(dashboard)/: layout.tsx
apps/web/src/app/(dashboard)/accounts/: page.tsx
apps/web/src/app/(dashboard)/copilot/: page.tsx
apps/web/src/app/(dashboard)/dashboard/: page.tsx
apps/web/src/app/(dashboard)/onboarding/: page.tsx
apps/web/src/app/(dashboard)/savings/: page.tsx
apps/web/src/app/(dashboard)/subscriptions/: page.tsx
apps/web/src/components/: PlaidLink.tsx
apps/web/src/components/dashboard/: AccountBalances.tsx  CategoryCharts.tsx  TransactionTable.tsx
apps/web/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Skeleton.tsx
apps/web/src/hooks/: usePlaid.ts
apps/web/src/lib/: trpc.ts
apps/web/src/trpc/: Provider.tsx  server.ts
load-tests/: load_test.js
(+4 files in other folders)
