[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-service"
version = "1.0.0"
description = "Finance Dashboard ML Service - Transaction categorization via ONNX-optimized model"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "onnxruntime==1.20.0",
    "numpy>=1.26.0",
    "pydantic>=2.9.0",
    "tokenizers>=0.20.0",
    "scikit-learn>=1.5.0",
    "skl2onnx>=1.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
